--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
   },
   "homepage": "https://github.com/xuchengli/cs-dashboard#readme",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "vue": "^2.4.3",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "url-loader": "^0.5.9",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.3",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
