--- a/package.json
+++ b/package.json
@@ -27,15 +27,23 @@
   "homepage": "https://github.com/xuchengli/cs-dashboard#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
+    "uikit": "^3.0.0-beta.30",
     "vue": "^2.4.3",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.3",
