--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
   },
   "homepage": "https://github.com/xuchengli/cs-dashboard#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "co": "^4.6.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "mongoose": "^4.11.13",
     "uikit": "^3.0.0-beta.30",
     "vue": "^2.4.3",
     "vue-router": "^2.7.0"
