--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "start": "npm run build && node app",
-    "dev": "webpack-dev-server --open --hot"
+    "dev": "cross-env NODE_ENV=development supervisor -w modules,routes,app.js -e js app"
   },
   "repository": {
     "type": "git",
@@ -47,12 +47,14 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "reload": "^2.2.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.3",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.7.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   }
 }
