--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.2.1",
     "mongoose": "^4.11.13",
     "uikit": "^3.0.0-beta.30",
+    "uuid": "^3.1.0",
     "vue": "^2.4.3",
     "vue-router": "^2.7.0"
   },
