--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "uikit": "^3.0.0-beta.30",
     "uuid": "^3.1.0",
     "vue": "^2.4.3",
+    "vue-i18n": "^7.3.1",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.2.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
