--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "uikit": "^3.0.0-beta.30",
     "uuid": "^3.1.0",
     "vue": "^2.4.3",
+    "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.3.1",
     "vue-router": "^2.7.0"
   },
