--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "body-parser": "^1.18.2",
     "co": "^4.6.0",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^3.0.2",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
-    "mongoose": "^4.11.13",
+    "mkdirp": "^0.5.1",
+    "mongoose": "^4.12.3",
+    "multer": "^1.3.0",
     "uikit": "^3.0.0-beta.30",
     "uuid": "^3.1.0",
     "vue": "^2.4.3",
