add backend function of video remove

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "dateformat": "^3.0.2",
     "express": "^4.15.4",
     "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^4.0.2",
     "jquery": "^3.2.1",
-    "mkdirp": "^0.5.1",
     "mongoose": "^4.12.3",
     "multer": "^1.3.0",
     "uikit": "^3.0.0-beta.30",
