--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/xuchengli/cs-dashboard#readme",
   "dependencies": {
+    "@lixuc/jsmpeg": "^1.0.1",
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "co": "^4.6.0",
@@ -40,6 +41,7 @@
     "uikit": "^3.0.0-beta.30",
     "uuid": "^3.1.0",
     "vue": "^2.4.3",
+    "vue-awesome": "^2.3.3",
     "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.3.1",
     "vue-router": "^2.7.0"
