--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,12 @@ services:
       - mongodb:dashboard_mongo
     ports:
       - "8080:8080"
+    volumes:
+      - /data/upload:/usr/app/src/upload
   mongodb:
     image: mongo
     container_name: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - /data/db:/data/db
