--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
     image: cognitive-solution-dashboard
     container_name: cs-dashboard
     environment:
-      - AI_VISION_API=${AI_VISION_API:-http://9.186.91.76:8080/vision-service/api}
+      - AI_VISION_API=${AI_VISION_API:-http://9.186.106.206:9080/powerai-vision/api}
       - Video_Stream_API=${Video_Stream_API:-http://9.186.106.206:8083/demo_video/stream}
       - MongoDB_URI=${MongoDB_URI:-mongodb://dashboard_mongo:27017/cognitive_solution}
     volumes:
