--- a/docker-compose.ppc64le.yml
+++ b/docker-compose.ppc64le.yml
@@ -5,9 +5,9 @@ services:
     image: cognitive-solution-dashboard
     container_name: cs-dashboard
     environment:
-      - AI_VISION_API=${AI_VISION_API:-http://9.186.106.213:9080/powerai-vision/api}
-      - Video_Stream_API=${Video_Stream_API:-http://9.186.106.213:8083/demo_video/stream}
-      - MongoDB_URI=${MongoDB_URI:-mongodb://dashboard_mongo:27017/cognitive_solution}
+      - AI_VISION_API=http://9.186.106.213:9080/powerai-vision/api
+      - Video_Stream_API=http://9.186.106.213:8083/demo_video/stream
+      - MongoDB_URI=mongodb://dashboard_mongo:27017/cognitive_solution
     links:
       - mongodb:dashboard_mongo
     ports:
