--- a/docker-compose.ppc64le.yml
+++ b/docker-compose.ppc64le.yml
@@ -1,12 +1,14 @@
 version: "2"
 services:
   dashboard:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.ppc64le
     image: cognitive-solution-dashboard
     container_name: cs-dashboard
     environment:
       - AI_VISION_API=http://9.186.106.213:9080/powerai-vision/api
-      - Video_Stream_API=http://9.186.106.213:8083/demo_video/stream
+      - Video_Stream_API=http://9.186.106.213:8082/video_demo/stream
       - MongoDB_URI=mongodb://dashboard_mongo:27017/cognitive_solution
     links:
       - mongodb:dashboard_mongo
