--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "vue-awesome": "^2.3.3",
     "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.3.1",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.2.1",
