--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-cookie": "^1.1.4",
     "vue-i18n": "^7.3.1",
     "vue-router": "^2.7.0",
+    "vue-slider-component": "^2.4.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
