--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "start": "npm run build && node app",
+    "lint": "eslint .",
     "dev": "cross-env NODE_ENV=development supervisor -w modules,routes,app.js -e js app"
   },
   "repository": {
@@ -51,6 +52,9 @@
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.2.1",
+    "eslint": "^4.16.0",
+    "babel-eslint": "^8.2.1",
+    "eslint-plugin-vue": "^4.2.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
